# RecordDemo

./: .gitattributes  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/record/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: lame-mp3-utils.cpp
app/src/main/cpp/lamemp3/: bitstream.c  id3tag.c  machine.h
app/src/main/java/com/example/record/: AudioRecorderManager.java  RecorderTimeListener.java
app/src/main/java/com/example/record/adapter/: FileListAdapter.java
app/src/main/java/com/example/record/config/: Constants.java
app/src/main/java/com/example/record/system/: RecordApplication.java
app/src/main/java/com/example/record/ui/: ListActivity.java  MainActivity.java
app/src/main/java/com/example/record/utils/: FileUtils.java  FormattedAudio.java  LameUtil.java
app/src/main/res/color/: color_selector.xml
app/src/main/res/drawable/: radiobutton_background_checked.xml  radiobutton_background_unchecked.xml  radiobutton_selector.xml
app/src/main/res/layout/: activity_list.xml  activity_main.xml  adapter_file_list.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
